# vcard

./: .gitignore  .hidden  LICENSE  README.md  fix_rel.py  fix_renderrellist.py  index.html  launch-vcard  pyproject.toml  requirements-cli.txt  requirements.txt  server.py  start-webui.py  start.py  vcard-studio.command
cards-clean/: README.md
cards-in/: .gitignore  README.md
cards-merge/: README.md
cards-out/: .gitignore  README.md
cards-raw/: sample.vcf
examples/: README.md
local/: vcard.conf
src/vcard_normalizer/: __init__.py  _similarity.py  activitylog.py  checkpoint.py  cli.py  config.py  dedupe.py  exporter.py  formatters.py  interactive.py  io.py  launcher.py  master.py  model.py  normalize.py  proprietary.py  report.py  review.py  server.py
src/vcard_normalizer.egg-info/: SOURCES.txt  requires.txt
src/vcard_normalizer/print_modules/: README.md  __init__.py  brother_ql820nwb.py  generic_a4.py  print_modules__init__.py
src/vcard_normalizer/static/: index.html
tests/: test_basic.py  test_first_run.py  test_milestones.py
