[project]
name = "vcard-normalizer"
version = "0.1.0"
description = "Normalize, dedupe, and export vCards (strip proprietary fields)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "James", email = "jameswinter@protonmail.ch"}]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "vobject>=0.9.7",
  "rapidfuzz>=3.9",
  "phonenumberslite>=8.13",
]

[project.scripts]
vcard-normalize = "vcard_normalizer.cli:app"

[tool.uv]
dev-dependencies = ["pytest>=8.0", "mypy>=1.11", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B","W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict = false
