[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcard-normalizer"
version = "3.2.0"
description = "Normalize, dedupe, and export vCards (strip proprietary fields, phone/country formatting)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "James", email = "jameswinter@protonmail.ch"}]
dependencies = [
  "vobject>=0.9.7",
  "rapidfuzz>=3.9",
]

# installable CLI
[project.scripts]
vcard-start    = "vcard_normalizer.launcher:main"
vcard-launcher = "vcard_normalizer.launcher:main"
vcard-normalize = "vcard_normalizer.cli:app"
vcard-ui       = "vcard_normalizer.server:main"

# dev extras for `-e .[dev]`
[project.optional-dependencies]
# Full CLI (terminal launcher, rich output, typer commands)
cli = ["typer>=0.12", "rich>=13.7"]
# International phone number parsing and formatting (Google's libphonenumber)
phonenumbers = ["phonenumbers>=8.13"]
# Everything — recommended for power users
full = ["typer>=0.12", "rich>=13.7", "phonenumbers>=8.13"]
dev = ["pytest>=8.0", "mypy>=1.11", "ruff>=0.6", "typer>=0.12", "rich>=13.7"]

# Ruff config (new location)
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B","W"]
ignore = ["E501","B008"]

# Tell setuptools we use the src/ layout
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
